--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-spring/three": "^10.0.3",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@stripe/stripe-js": "^8.6.4",
+    "framer-motion": "^12.29.2",
     "next": "16.1.6",
     "postcss": "^8.5.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-fast-marquee": "^1.6.5",
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
+    "stripe": "^20.2.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
